# learning_rust

./: Cargo.toml  README.md
search/: binary.rs  linear.rs
sort/: bubble.rs  insertion.rs  selection.rs
