[package]
name = "learning_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "linear"
path = "search/linear.rs"

[[bin]]
name = "binary"
path = "search/binary.rs"

[[bin]]
name = "bubble"
path = "sort/bubble.rs"

[[bin]]
name = "insertion"
path = "sort/insertion.rs"

[dependencies]